crates/batchalign-app/tests/snapshots/json_compat__job_submission_minimal.snap
---
source: crates/batchalign-app/tests/json_compat.rs
assertion_line: 46
expression: sub
---
{
  "command": "morphotag",
  "lang": "eng",
  "num_speakers": 1,
  "files": [],
  "media_files": [],
  "media_mapping": "",
  "media_subdir": "",
  "source_dir": "",
  "options": {
    "command": "morphotag",
    "override_media_cache": false,
    "batch_window": 25,
    "retokenize": false,
    "skipmultilang": false,
    "merge_abbrev": false,
    "no_l2_morphotag": false,
    "no_pos_hints": false
  },
  "paths_mode": false,
  "source_paths": [],
  "output_paths": [],
  "display_names": [],
  "debug_traces": false,
  "before_paths": []
}
